converting pojos into record classes and moving builders into separate classes